fix: CLIN-2283 duplicate tooltip on safari

--- a/src/views/Cnv/Exploration/variantColumns.module.scss
+++ b/src/views/Cnv/Exploration/variantColumns.module.scss
@@ -9,6 +9,12 @@
   white-space: nowrap;
 }
 
+// prevent safari double tooltip
+.variantTableCellElipsis::after {
+  content: '';
+  display: block;
+}
+
 .variantTableCell {
   min-width: 160px;
 }
